data/derived/comb/progs/unify/prog3560.ml.out
Characters 65-80:
  digitsOfInt n10 :: [n mod 10];;
  ^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a list
